# PiX-iES

./: BOOT.S  BUILD.BAT  CLEAN.BAT  EBOOT.PBP  GPIOBANKS.txt  LINK.LD  LinkScript.ld  Makefile  PiX.C  PiX.H  PiX.c.save  PiX.cpp  PiX.iES  PiX.img  README.md  Readme.md  boot.S  boot.S.bugs  boot.S.new  boot.S.smpnw  boot.S.test  boot.S.unnested  boot.S.vector  boot.h  build-min.bat  build.bat  capstone_test.py  checkpoints.txt  clean.bat  cmdhere.bat  config.txt  diag.bat  env.bat  gpio_new.py  gpio_old.py  here.bat  iES.C  iES.H  iES.cpp  ies.c  (+21 more)
BOOT-PARTITION/: PiX.iES  config.txt
PiXelf/: .comment  .eh_frame  .rela.data  .rela.eh_frame  .rela.text  .rodata  .shstrtab  .strtab  .symtab  .text
XCOMPILER-LINUX86/: 10.2-2020.11-x86_64-aarch64-none-elf-manifest.txt
boot/: config.txt  pix.ies
compiler/: 10.2-2020.11-mingw-w64-i686-arm-none-eabi-manifest.txt
debug/: bitstream.bat  bitstream.py  bitstream.txt  defines_full.txt  defines_min.txt  disasm.txt  headers.txt  here.bat  package.bat  readme.md
debug/mingw_x64/: _M_target.txt  dumpbin.txt  (+4 more)
diff/: diff1.txt  diff2.txt  rodata-diff2-array.txt
elf2pbp/: data.psp  elf2pbp  icon0.png.old  pack-pbp  param.sfo.old
gu/: pspdev.manifest.txt
gu/cube/: CMakeLists.txt  callbacks.h  logo.raw  main.c  vram.h
gu/hello/: CMakeLists.txt  main.c
hello_fft/: gpu_fft.c  gpu_fft.h  gpu_fft_base.c  gpu_fft_twiddles.c
logs/: blank-EBOOT.PBP  data.psp.min.elf  data.psp.min.missing.elf  kernel.elf  kernel.elf.objdump.txt
python/: log.txt  modules.json  modules_jsontest.py  pytrace.txt  script.py
unpacked/: param.sfo
(+1264 files in other folders)
